[tool.poetry]
name = "wemo"
version = "0.1.0"
description = ""
authors = ["Jackylee <jieli.work@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "6.8.1"
rich = "^13.9.4"
sqlalchemy = "^2.0.36"
dataclasses-json = "^0.6.7"
jinja2 = "^3.1.5"
filetype = "^1.2.0"
pillow = "^11.1.0"
pywxdump = "^3.1.38"
xmltodict = "^0.14.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
